route static content

--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
   "devDependencies": {
     "http-server": "^0.8.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "restify": "^4.0.3"
+  },
   "engines": {
     "node": ">=4.2.6"
   },
   "config": {
-    "web-port": 80
+    "port": 80,
+    "path": {
+      "public": "../"
+    }
   },
   "scripts": {
     "postinstall": "",
     "prestart": "npm install",
-    "start-web": "http-server -a localhost -p 80 -c-1 ./web/public"
+    "start-web": "http-server -a localhost -p 80 -c-1 ./web/public",
+    "start": "node server/app.js"
   }
 }
