query dbpedia for artist name

--- a/application/proxy/Muxar/Muxar.BrightStarDb/Muxar.BrightStarDb.csproj
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/Muxar.BrightStarDb.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Endpoints\DbpediaEndpoint.cs" />
     <Compile Include="Models\IAlbum.cs" />
     <Compile Include="Models\IArtist.cs" />
     <Compile Include="Models\IMember.cs" />
