--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
     "http-server": "^0.8.5"
   },
   "dependencies": {
-    "restify": "^4.0.3"
+    "restify": "^4.0.3",
+    "bootstrap": "^3.3.6",
+    "browserify": "^10.2.4",
+    "flux": "^2.0.3",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-eslint": "^0.15.0",
+    "gulp-open": "^0.3.2",
+    "jquery": "^2.2.0",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
     "node": ">=4.2.6"
