--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "http-server": "^0.8.5"
   },
   "dependencies": {
-    "restify": "^4.0.3",
     "bootstrap": "^3.3.6",
     "browserify": "^10.2.4",
     "flux": "^2.0.3",
@@ -22,6 +21,8 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
+    "restify": "^4.0.3",
+    "sparql": "^0.1.3",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
