move sparql query strings in resource files, where they belong

--- a/application/proxy/Muxar/Muxar/Muxar.csproj
+++ b/application/proxy/Muxar/Muxar/Muxar.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\GenresController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RegionsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Helpers\Validators.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
