--- a/application/proxy/Muxar/Muxar.BrightStarDb/Muxar.BrightStarDb.csproj
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/Muxar.BrightStarDb.csproj
@@ -55,6 +55,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -69,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Endpoints\DbpediaEndpoint.cs" />
+    <Compile Include="Helpers\DbpediaHelper.cs" />
     <Compile Include="Models\IAlbum.cs" />
     <Compile Include="Models\IArtist.cs" />
     <Compile Include="Models\IMember.cs" />
@@ -81,10 +83,10 @@
       <DependentUpon>MyEntityContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SparqlQueryResources.Designer.cs">
+    <Compile Include="SparqlResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SparqlQueryResources.resx</DependentUpon>
+      <DependentUpon>SparqlResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -101,9 +103,9 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SparqlQueryResources.resx">
+    <EmbeddedResource Include="SparqlResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>SparqlQueryResources.Designer.cs</LastGenOutput>
+      <LastGenOutput>SparqlResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
