--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reactify": "^1.1.1",
     "restify": "^4.0.3",
     "sparql": "^0.1.3",
+    "sparql-client": "^0.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
@@ -32,7 +33,9 @@
     "port": 80,
     "path": {
       "public": "../"
-    }
+    },
+    "rdf": "http://localhost:8080/openrdf-sesame/repositories/muxar_rdf",
+    "rdfUpdate": "http://localhost:8080/openrdf-workbench/repositories/muxar_rdf/update"
   },
   "scripts": {
     "postinstall": "",
