--- a/application/proxy/Muxar/Muxar/Web.config
+++ b/application/proxy/Muxar/Muxar/Web.config
@@ -10,6 +10,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DbpediaEndpointUri" value="http://dbpedia.org/sparql" />
+    <add key="EchonestEndpointUri" value="http://developer.echonest.com/api/v4/" />
+    <add key="EchonestApiKey" value="api_key=ECLJI0GPBJVEXSZDT" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -27,7 +29,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
