--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
+    "request": "^2.69.0",
     "restify": "^4.0.3",
     "sparql": "^0.1.3",
     "sparql-client": "^0.2.0",
+    "spotify-web-api-node": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
@@ -34,6 +36,11 @@
     "path": {
       "public": "../"
     },
+    "spotify": {
+      "client_id": "",
+      "client_secret": ""
+    },
+    "proxy": "http://54.69.89.91/Muxar/",
     "rdf": "http://localhost:8080/openrdf-sesame/repositories/muxar_rdf",
     "rdfUpdate": "http://localhost:8080/openrdf-workbench/repositories/muxar_rdf/update"
   },
