--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sparql": "^0.1.3",
     "sparql-client": "^0.2.0",
     "spotify-web-api-node": "^2.2.0",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
