complete api documentation; return more data from artists from country

--- a/application/proxy/Muxar/Muxar.EntitiesDto/Muxar.EntitiesDto.csproj
+++ b/application/proxy/Muxar/Muxar.EntitiesDto/Muxar.EntitiesDto.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ArtistDto.cs" />
     <Compile Include="CountryDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleArtistDto.cs" />
     <Compile Include="SongDto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
